// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spoiler renders correctly 1`] = `
.c0 {
  background: var(--colorText);
  color: var(--colorText);
  cursor: help;
  display: inline;
  padding: 0.1rem;
}

.c0 > :first-child {
  margin-top: 0;
}

.c0 > :last-child {
  margin-bottom: 0;
}

<span
  aria-label="Spoiler"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="c0"
  >
    Hidden text
  </span>
</span>
`;

exports[`Spoiler with layout "block" renders correctly 1`] = `
.c0 {
  background: var(--colorText);
  color: var(--colorText);
  cursor: help;
  display: block;
  margin-bottom: 2.488rem;
  padding: 0.1rem;
}

.c0 > :first-child {
  margin-top: 0;
}

.c0 > :last-child {
  margin-bottom: 0;
}

<span
  aria-label="Spoiler"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="c0"
  >
    <p>
      This is some 
      <strong>
        text
      </strong>
      , which is 
      <em>
        hidden
      </em>
      .
    </p>
    <p>
       And some more text
    </p>
  </span>
</span>
`;
